//syntax = "proto3";
//package inventory;
//option go_package = "proto/inventorypb";
//
//service InventoryService {
//  rpc CheckItemAvailable(CheckItemRequest) returns (CheckItemResponse);
//  rpc DeductItem(DeductItemRequest) returns (DeductItemResponse);
//}
//
//message CheckItemRequest {
//  string item_id = 1;
//  int32 quantity = 2;
//}
//
//message CheckItemResponse {
//  bool available = 1;
//}
//
//message DeductItemRequest {
//  string item_id = 1;
//  int32 quantity = 2;
//}
//
//message DeductItemResponse {
//  bool success = 1;
//}
// -------------------------------------------

//syntax = "proto3";
//
//package inventory;
//option go_package = "proto/inventorypb";
//
//import "google/api/annotations.proto";
//
//service InventoryService {
//  rpc CheckItemAvailable(CheckItemRequest) returns (CheckItemResponse) {
//    option (google.api.http) = {
//      post: "/v1/inventory/check"
//      body: "*"
//    };
//  }
//
//  rpc DeductItem(DeductItemRequest) returns (DeductItemResponse) {
//    option (google.api.http) = {
//      post: "/v1/inventory/deduct"
//      body: "*"
//    };
//  }
//}
//
//message CheckItemRequest {
//  string item_id = 1;
//  int32 quantity = 2;
//}
//
//message CheckItemResponse {
//  bool available = 1;
//}
//
//message DeductItemRequest {
//  string item_id = 1;
//  int32 quantity = 2;
//}
//
//message DeductItemResponse {
//  bool success = 1;
//}
//-------------------------------------------

    syntax = "proto3";

package inventory;
option go_package = "proto/inventorypb";

import "google/api/annotations.proto";

service InventoryService {
  rpc CheckItemAvailable(CheckItemRequest) returns (CheckItemResponse) {
    option (google.api.http) = {
      post: "/v1/inventory/check"
      body: "*"
    };
  }

  rpc DeductItem(DeductItemRequest) returns (DeductItemResponse) {
    option (google.api.http) = {
      post: "/v1/inventory/deduct"
      body: "*"
    };
  }

  rpc ListItems(ListItemsRequest) returns (ListItemsResponse) {
    option (google.api.http) = {
      get: "/v1/inventory/list"
    };
  }

  rpc UpdateItem(UpdateItemRequest) returns (UpdateItemResponse) {
    option (google.api.http) = {
      put: "/v1/inventory/update"
      body: "*"
    };
  }
}

message Item {
  string id = 1;
  string name = 2;
  int32 quantity = 3;
}

message CheckItemRequest {
  string item_id = 1;
  int32 quantity = 2;
}

message CheckItemResponse {
  bool available = 1;
  Item item = 2;
}

message DeductItemRequest {
  string item_id = 1;
  int32 quantity = 2;
}

message DeductItemResponse {
  bool success = 1;
}

message ListItemsRequest {}

message ListItemsResponse {
  repeated Item items = 1;
}

message UpdateItemRequest {
  Item item = 1;
}

message UpdateItemResponse {
  bool success = 1;
}


